[gd_scene load_steps=7 format=3 uid="uid://bp4lm4bhxql7v"]

[ext_resource type="Theme" uid="uid://cimcgg33xdiyd" path="res://Themes/main.theme" id="1_exlsd"]
[ext_resource type="Script" path="res://Menus/hazards.gd" id="2_annd6"]
[ext_resource type="Texture2D" uid="uid://red3to85khip" path="res://Icons/Levels/exclamation1.png" id="2_ry7qr"]
[ext_resource type="StyleBox" uid="uid://bnorgblhsf46e" path="res://Themes/Styleboxes/inverse.stylebox" id="4_jtnik"]
[ext_resource type="FontFile" uid="uid://c4o05i4pa21je" path="res://Themes/Fonts/InriaSans-Regular.otf" id="4_ktsoa"]
[ext_resource type="Texture2D" uid="uid://ctbr33d5xe8vj" path="res://Icons/Hazards/distribution-box.png" id="5_h2n02"]

[node name="Hazards" type="Control"]
custom_minimum_size = Vector2(540, 450)
layout_mode = 3
anchors_preset = 0
offset_top = 140.0
offset_right = 540.0
offset_bottom = 590.0
theme = ExtResource("1_exlsd")
script = ExtResource("2_annd6")

[node name="Outside" type="Control" parent="."]
visible = false
anchors_preset = 0

[node name="Sandbag" type="TextureButton" parent="Outside"]
layout_mode = 0
offset_left = 81.0
offset_top = 253.0
offset_right = 131.0
offset_bottom = 303.0
texture_normal = ExtResource("2_ry7qr")

[node name="Living" type="Control" parent="."]
anchors_preset = 0
offset_top = 50.0
offset_bottom = 50.0

[node name="Rug" type="TextureButton" parent="Living"]
layout_mode = 0
offset_left = 209.0
offset_top = 237.0
offset_right = 259.0
offset_bottom = 287.0
texture_normal = ExtResource("2_ry7qr")

[node name="Console" type="TextureButton" parent="Living"]
layout_mode = 0
offset_left = 433.0
offset_top = 213.0
offset_right = 483.0
offset_bottom = 263.0
texture_normal = ExtResource("2_ry7qr")

[node name="Breaker" type="TextureButton" parent="Living"]
layout_mode = 0
offset_left = 41.0
offset_top = 85.0
offset_right = 91.0
offset_bottom = 135.0
texture_normal = ExtResource("2_ry7qr")

[node name="Kitchen" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_top = 50.0
offset_bottom = 50.0

[node name="Water" type="TextureButton" parent="Kitchen"]
layout_mode = 0
offset_left = 257.0
offset_top = 205.0
offset_right = 307.0
offset_bottom = 255.0
texture_normal = ExtResource("2_ry7qr")

[node name="Gas" type="TextureButton" parent="Kitchen"]
layout_mode = 0
offset_left = 89.0
offset_top = 149.0
offset_right = 139.0
offset_bottom = 199.0
texture_normal = ExtResource("2_ry7qr")

[node name="Bathroom" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_top = 50.0
offset_bottom = 50.0

[node name="Family" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_top = 50.0
offset_bottom = 50.0

[node name="Desktop" type="TextureButton" parent="Family"]
layout_mode = 0
offset_left = 49.0
offset_top = 133.0
offset_right = 99.0
offset_bottom = 183.0
texture_normal = ExtResource("2_ry7qr")

[node name="Bedroom" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_top = 50.0
offset_bottom = 50.0

[node name="HazardMenu" type="Panel" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.588235)
custom_minimum_size = Vector2(540, 450)
layout_mode = 1
offset_right = 540.0
offset_bottom = 390.0
theme = ExtResource("1_exlsd")
theme_override_styles/panel = ExtResource("4_jtnik")

[node name="VBoxContainer" type="VBoxContainer" parent="HazardMenu"]
custom_minimum_size = Vector2(520, 350)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -175.0
offset_right = 260.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Sandbag" type="VBoxContainer" parent="HazardMenu/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 30

[node name="Description" type="Label" parent="HazardMenu/VBoxContainer/Sandbag"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_fonts/font = ExtResource("4_ktsoa")
theme_override_font_sizes/font_size = 26
text = "A temporary flood barrier can prevent water from getting in your house."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Prompt" type="Label" parent="HazardMenu/VBoxContainer/Sandbag"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/font_size = 30
text = "Do you want to make a flood barrier with the sandbags?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Rug" type="VBoxContainer" parent="HazardMenu/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 30

[node name="Description" type="Label" parent="HazardMenu/VBoxContainer/Rug"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_fonts/font = ExtResource("4_ktsoa")
theme_override_font_sizes/font_size = 26
text = "Any expensive and valuable belongings should be stored at a higher place."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Prompt" type="Label" parent="HazardMenu/VBoxContainer/Rug"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/font_size = 30
text = "Do you want to move your expensive rugs?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Console" type="VBoxContainer" parent="HazardMenu/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 30

[node name="Description" type="Label" parent="HazardMenu/VBoxContainer/Console"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_fonts/font = ExtResource("4_ktsoa")
theme_override_font_sizes/font_size = 26
text = "Any expensive and valuable belongings should be stored at a higher place."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Prompt" type="Label" parent="HazardMenu/VBoxContainer/Console"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/font_size = 30
text = "Do you want to move your gaming console?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Breaker" type="VBoxContainer" parent="HazardMenu/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 20

[node name="Description" type="Label" parent="HazardMenu/VBoxContainer/Breaker"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_fonts/font = ExtResource("4_ktsoa")
theme_override_font_sizes/font_size = 24
text = "A circuit breaker is an electrical safety device that doubles as a switch to connect and disconnect electrical power."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Image" type="TextureRect" parent="HazardMenu/VBoxContainer/Breaker"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
texture = ExtResource("5_h2n02")
expand_mode = 1
stretch_mode = 5

[node name="Prompt" type="Label" parent="HazardMenu/VBoxContainer/Breaker"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/font_size = 30
text = "Do you want to turn off the circuit breaker?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Water" type="VBoxContainer" parent="HazardMenu/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 20

[node name="Description" type="Label" parent="HazardMenu/VBoxContainer/Water"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_fonts/font = ExtResource("4_ktsoa")
theme_override_font_sizes/font_size = 24
text = "A circuit breaker is an electrical safety device that doubles as a switch to connect and disconnect electrical power."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Image" type="TextureRect" parent="HazardMenu/VBoxContainer/Water"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
texture = ExtResource("5_h2n02")
expand_mode = 1
stretch_mode = 5

[node name="Prompt" type="Label" parent="HazardMenu/VBoxContainer/Water"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/font_size = 30
text = "Do you want to turn off the circuit breaker?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Gas" type="VBoxContainer" parent="HazardMenu/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 20

[node name="Description" type="Label" parent="HazardMenu/VBoxContainer/Gas"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_fonts/font = ExtResource("4_ktsoa")
theme_override_font_sizes/font_size = 24
text = "A circuit breaker is an electrical safety device that doubles as a switch to connect and disconnect electrical power."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Image" type="TextureRect" parent="HazardMenu/VBoxContainer/Gas"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
texture = ExtResource("5_h2n02")
expand_mode = 1
stretch_mode = 5

[node name="Prompt" type="Label" parent="HazardMenu/VBoxContainer/Gas"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/font_size = 30
text = "Do you want to turn off the circuit breaker?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Desktop" type="VBoxContainer" parent="HazardMenu/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 20

[node name="Description" type="Label" parent="HazardMenu/VBoxContainer/Desktop"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_fonts/font = ExtResource("4_ktsoa")
theme_override_font_sizes/font_size = 24
text = "A circuit breaker is an electrical safety device that doubles as a switch to connect and disconnect electrical power."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Image" type="TextureRect" parent="HazardMenu/VBoxContainer/Desktop"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
texture = ExtResource("5_h2n02")
expand_mode = 1
stretch_mode = 5

[node name="Prompt" type="Label" parent="HazardMenu/VBoxContainer/Desktop"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.780392, 0.780392, 0.780392, 1)
theme_override_font_sizes/font_size = 30
text = "Do you want to turn off the circuit breaker?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HazardMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="YesButton" type="Button" parent="HazardMenu/VBoxContainer/HBoxContainer"]
self_modulate = Color(0.478431, 1, 0.501961, 1)
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 26
text = "YES"

[node name="NoButton" type="Button" parent="HazardMenu/VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 0.580392, 0.501961, 1)
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 26
text = "NO"

[connection signal="pressed" from="HazardMenu/VBoxContainer/HBoxContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="HazardMenu/VBoxContainer/HBoxContainer/NoButton" to="." method="_on_no_button_pressed"]
